--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,11 @@ jobs:
     - name: Run npm build
       run: pnpm run build
 
-    - uses:  'phips28/gh-action-bump-version@master'
-      name:  'Automated Version Bump'
-      id: version-bump
+    - name: Release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      with:
-        commit-message: 'CI: bumps version to {{version}} [skip ci]'
+      run: >-
+        gh release create ${{ github.ref_name }}
+        "release.zip"
+        --generate-notes
+        --title "Version ${{ github.ref_name }}
