--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
         gh release create ${{ github.ref_name }}
         "release.zip"
         --generate-notes
-        --title "Version ${{ github.ref_name }}""
+        --title "Version ${{ github.ref_name }}"
