--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: >-
-        gh release create ${{ github.ref_name }}
-        "release.zip"
+        gh release create ${{ github.ref_name }} *
         --generate-notes
         --title "Version ${{ github.ref_name }}"
