--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: >-
         gh release create ${{ github.ref_name }}
-        "action.yml,package.json,dist/*"
         --generate-notes
         --title "Version ${{ github.ref_name }}"
+        action.yml package.json dist/*
