--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,14 @@ jobs:
     - name: Run npm build
       run: pnpm run build
 
+    - uses:  'phips28/gh-action-bump-version@master'
+      name:  'Automated Version Bump'
+      id: 'version-bump'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      with:
+        commit-message: 'CI: bumps version to {{version}} [skip ci]'
+
     - name: Release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
