--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,5 @@ jobs:
       run: >-
         gh release create 1
         --generate-notes
+        --clobber
         --title "Version ${{ github.ref_name }}"
-        action.yml package.json dist/*
