--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: >-
+        gh release delete 1 --cleanup-tag -y
         gh release create 1
         --generate-notes
         --title "Version ${{ github.ref_name }}"
