--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
 
-    - name: Install dependencies
-      run: pnpm install
+    # - name: Install dependencies
+    #   run: pnpm install
 
-    - name: Run npm build
-      run: pnpm run build
+    # - name: Run npm build
+    #   run: pnpm run build
 
     - name: Release
       env:
