--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'src/**'
       - 'action.yml'
+      - 'dist/*'
       - '.github/workflows/main.yml'
       - 'esbuild.ts'
       - 'package.json'
