--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   PR:
     runs-on: ubuntu-latest
-    name: lint
+    name: test
     steps:
     - name: test analytica trigger
       uses: andreigecanalytica/analytica.click.gh@1
