--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.3.2",
     "ag-common": "0.0.440",
     "analytica.click": "0.0.338",
+    "axios": "^1.4.0",
     "cross-env": "7.0.3",
     "esbuild": "0.18.10",
     "eslint-config-e7npm": "0.0.9",
