--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "analytica.click": "0.0.338",
     "axios": "^1.4.0",
     "cross-env": "7.0.3",
+    "cross-fetch": "^3.1.7",
     "esbuild": "0.18.10",
     "eslint-config-e7npm": "0.0.9",
     "nodemon": "2.0.22",
