--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -45,3 +45,9 @@ jobs:
       env:
         CI: false
       run: pnpm run build
+
+    - name: notify analytica of build
+      uses: andreigecanalytica/analytica.click.gh@1
+      with:
+        analyticaToken: '${{ secrets.ANALYTICATOKEN }}'
+        eventName: '${{ github.repository }}-${{ github.job }}-${{ github.event_name }}'
