--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: >-
-        gh release delete 2 --cleanup-tag -y;
+        gh release delete 2 --cleanup-tag -y || true;
         gh release create 2
         --generate-notes
-        --title "Version ${{ github.ref_name }}"
+        --title "Version ${{ github.ref_name }}";
