--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,8 @@ inputs:
     description: 'your API token'
   GITHUB_CONTEXT:
     required: true
-    description: '${{ toJson(github) }}'
+    description: 'the github context'
+    default: '${{ toJson(github) }}'
 runs:
   using: 'node16'
   main: 'dist/index.js'
