--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
 
+    - name: Install dependencies
+      run: pnpm install
+
+    - name: Run npm build
+      run: pnpm run build
+
     - name: Release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
