--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -47,6 +47,6 @@ jobs:
       run: pnpm run build
 
     - name: notify analytica of build
-      uses: andreigecanalytica/analytica.click.gh@2
+      uses: andreigecanalytica/analytica.click.gh@v2
       with:
         ANALYTICA_TOKEN: '${{ secrets.ANALYTICATOKEN }}'
