--- a/package.json
+++ b/package.json
@@ -16,26 +16,20 @@
   },
   "dependencies": {
     "@actions/core": "1.10.0",
-    "@types/node": "^20.3.2",
-    "ag-common": "0.0.441",
-    "analytica.click": "0.0.339",
-    "axios": "^1.4.0",
+    "@types/node": "20.4.8",
+    "analytica.click": "0.0.355",
     "cross-env": "7.0.3",
-    "cross-fetch": "^3.1.7",
-    "esbuild": "0.18.10",
-    "eslint-config-e7npm": "0.0.9",
-    "nodemon": "2.0.22",
+    "cross-fetch": "4.0.0",
+    "esbuild": "0.18.19",
+    "eslint-config-e7npm": "0.0.18",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
-    "typescript": "5.x"
-  },
-  "devDependencies": {
-    "npm-dts": "1.3.12"
+    "typescript": "5.1.6"
   },
   "engines": {
     "node": ">=18",
     "yarn": "use pnpm",
     "npm": "use pnpm",
-    "pnpm": ">=3"
+    "pnpm": ">=8.6"
   }
 }
