--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -47,6 +47,7 @@ jobs:
       run: pnpm run build
 
     - name: notify analytica of build
+      if: always()
       uses: andreigecanalytica/analytica.click.gh@v2
       with:
         ANALYTICA_TOKEN: '${{ secrets.ANALYTICATOKEN }}'
