--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "format": "eslint --ext .ts,.tsx ./src --fix",
-    "lint": "tsc && eslint --ext .ts,.tsx ./src",
+    "format": "eslint --ext .ts,.tsx,.js,.json src --fix",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint --ext .ts,.tsx,.js,.json src",
+    "lint": "pnpm run /^lint:/",
     "build-direct": "rimraf .build && rimraf dist && cross-env NODE_ENV=prod ts-node esbuild",
     "build": "pnpm run lint && pnpm build-direct",
     "start": "ts-node src/direct.ts"
