--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "format": "eslint --ext .ts,.tsx,.js,.json src --fix",
+    "format": "eslint --ext .ts,.tsx src --fix",
     "lint:tsc": "tsc --noEmit",
-    "lint:eslint": "eslint --ext .ts,.tsx,.js,.json src",
+    "lint:eslint": "eslint --ext .ts,.tsx src",
     "lint": "pnpm run /^lint:/",
     "build-direct": "rimraf .build && rimraf dist && cross-env NODE_ENV=prod ts-node esbuild",
     "build": "pnpm run lint && pnpm build-direct",
