--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,10 @@ on:
       - 'esbuild.ts'
       - 'package.json'
 
+permissions:
+  contents: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,16 +26,16 @@ jobs:
       uses: actions/checkout@v5
 
     - name: Install Node.js
-      uses: actions/setup-node@v5
+      uses: actions/setup-node@v6
       with:
-        node-version: 22
+        node-version: lts/*
+        registry-url: https://registry.npmjs.org
 
     - uses: pnpm/action-setup@v4
       name: Install pnpm
       id: pnpm-install
       with:
         version: 10
-        run_install: false
 
     - name: Get pnpm store directory
       id: pnpm-cache
@@ -62,8 +66,6 @@ jobs:
         git push || true;
 
     - name: Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: >-
         gh release delete v2 --cleanup-tag -y || true;
         gh release create v2
