--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,8 @@ jobs:
         git push || true;
 
     - name: Release
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: >-
         gh release delete v2 --cleanup-tag -y || true;
         gh release create v2
