--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analytica.click.gh-build",
-  "version": "2",
+  "version": "2.0.0",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -19,12 +19,12 @@
     "start": "ts-node src/direct.ts"
   },
   "dependencies": {
-    "@actions/core": "1.11.1",
-    "@types/node": "24.10.1",
+    "@actions/core": "2.0.0",
+    "@types/node": "25.0.0",
     "analytica.click": "0.0.576",
     "cross-env": "10.1.0",
     "cross-fetch": "4.1.0",
-    "esbuild": "0.27.0",
+    "esbuild": "0.27.1",
     "eslint-config-e7npm": "0.1.28",
     "rimraf": "6.1.2",
     "ts-node": "10.9.2",
@@ -37,6 +37,6 @@
     "pnpm": ">=8.6"
   },
   "devDependencies": {
-    "eslint": "^9.30.1"
+    "eslint": "9.39.1"
   }
 }
